--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <main>
-  <h1>Hello from Angular App with Webpack</h1>
-
-  <img src="../assets/images/angular.png">
+  <h1>Zing Dashboard</h1>
+  <app-main-menu></app-main-menu>
 </main>
