set up node basic

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,4 +1,10 @@
 body {
     background: #0147A7;
     color: #fff;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #00B7FF;
 }
