--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,12 @@
-main {
-  padding: 1em;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
-  margin-top: 50px;
-  display: block;
+.status {
+  display: inline-block;
+  font-style: italic;
+  font-size: 12px;
+  width: 80%;
+}
+.config {
+  display: inline-block;;
+  text-align: right;
+  font-size: 12px;
+  width: 19%;
 }
