--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,17 +2,20 @@
 <html>
   <head>
       <base href="/">
-      <title>Zing</title>
-      <base href="/">
       <meta charset="UTF-8">
       <meta name="viewport"
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Angular 2 Messenger</title>
+      
+      <title>Fred&amp;Matt Backstage</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-      <link rel="stylesheet" href="/css/styles.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+      <link rel="stylesheet" href="app.css">
   </head>
   <body>
     <my-app>Loading...</my-app>
+    <script src="polyfills.js"></script>
+    <script src="vendor.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
