simple structure done and tests work with inline templates and inactive property and event bindings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,9 @@
+<h1>{{ title }}</h1>
 <div class="container">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <article class="panel panel-default">
-        <div class="panel-body">
-          {{ endpoint.name }}
-        </div>
-        <footer class="panel-footer">
-          <div class="status">
-            {{ endpoint.user }}
-          </div>
-          <div class="config">
-            <a href="#">Change</a>
-            <a href="#">Delete</a>
-          </div>
-        </footer>
-      </article>
+      <app-main-menu></app-main-menu>
+      <app-endpoint [endpoint]="firstEndpoint"></app-endpoint>
     </div>
   </div>
 </div>
