modified testing of endpoint

--- a/src/app/endpoints/endpoint.component.html
+++ b/src/app/endpoints/endpoint.component.html
@@ -1,5 +1,5 @@
+<input type="text" class="endpoint-input" [(ngModel)]="endpoint.name">
 <article class="panel panel-default">
-  <input type="text" class="endpoint-input" [(ngModel)]="endpoint.name">
   <div class="panel-body">
     {{ endpoint.name }}
   </div>
@@ -8,7 +8,7 @@
       {{ endpoint.type }}
     </div>
     <div class="config">
-      <a href="#">Change</a>
+      <a href="#" (click)="onEdit()">Change</a>
       <a href="#">Delete</a>
     </div>
   </footer>
