--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <app-main-menu></app-main-menu>
-      <app-endpoint [endpoint]="firstEndpoint"></app-endpoint>
+      <app-endpoint [inputEndpoint]="firstEndpoint"></app-endpoint>
     </div>
   </div>
 </div>
