--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <h1>{{ title }}</h1>
 <div class="container">
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <app-main-menu></app-main-menu>
-      <app-endpoint [inputEndpoint]="firstEndpoint"></app-endpoint>
-    </div>
+    <app-main-menu></app-main-menu>
+  </div>
+  <div class="row">
+    <endpoint-input></endpoint-input>
+  </div>
+  <hr>
+  <div class="row">
+    <endpoint-list></endpoint-list>
   </div>
 </div>
