--- a/src/app/endpoints/endpoint.component.html
+++ b/src/app/endpoints/endpoint.component.html
@@ -1,4 +1,3 @@
-<input type="text" class="endpoint-input" [(ngModel)]="endpoint.name">
 <article class="panel panel-default">
   <div class="panel-body">
     {{ endpoint.name }}
@@ -8,7 +7,7 @@
       {{ endpoint.type }}
     </div>
     <div class="config">
-      <a href="#" (click)="onEdit()">Change</a>
+      <a href="#" (click)="onChange()">Change</a>
       <a href="#">Delete</a>
     </div>
   </footer>
