moved and restarted Node.JS app

--- a/serve/views/index.hbs
+++ b/serve/views/index.hbs
@@ -2,12 +2,12 @@
 <html>
   <head>
     <base href="/">
-    <title>Angular With Webpack</title>
+    <title>{{title}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <h1>Hello again 2</h1>
-    <my-app>Loading...</my-app>
-  <script type="text/javascript" src="http://localhost:4000/polyfills.js"></script><script type="text/javascript" src="http://localhost:4000/vendor.js"></script><script type="text/javascript" src="http://localhost:4000/app.js"></script></body>
+    <backstage-app>Loading...</backstage-app>
+  </body>
 </html>
