--- a/serve/views/index.hbs
+++ b/serve/views/index.hbs
@@ -5,9 +5,10 @@
     <title>{{title}}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello again 2</h1>
+    <h1>{{ title }}</h1>
     <backstage-app>Loading...</backstage-app>
   </body>
 </html>
